with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.20.1
====================
[2921935] Dragbar now works in List view without needing the mouse to activate.
[2918849] Fixed icon no longer appearing in taskbar when locking due to
workstation lock and terminal services running.
[2916338] "Edit Base entry" now works for Alias entries as well as for Shortcuts.
[2913440] Copy/Send Email menu items now correctly activated if email field
is set or 'mailto:' used in URL field.
[2912177] Restore 'Add Group' menu item to context menu when clicking
on an entry and allow new group to remain unchanged.
[] Finally fix issues running under pre-XP versions of Windows.

New Features for 3.20.1
=======================
[2919319] Now able to use PasswordSafe to generator passwords as per user defined
policy from the Manage menu.

Changes to Existing Features in 3.20.1
======================================


Bugs fixed in 3.20
==================
[2906249] User changes to List view's column order are now persistent.
[2905961] ESC key now works correctly in View Entry when in RO mode.
[2873106] Export XML warnings now consistent with Export Text's.
[2872829] Duplicating an entry now copies the password policy as well.
[2872602] Preferences are now correctly deleted from the Windows registry
if they match the default (when registry is enabled).
[2870059] When an entry is highlighted during Find, the Toolbar and menu
items now reflect its contents.
[2868278] Minimize via the system menu, SystemTray menu and system control
box button now locks the database if the preference 'Lock on Minimize' is
set.
[2868244] Change font dialogs now work again.
[] Import from a text file with non-Latin text now works correctly.